--- a/package.json
+++ b/package.json
@@ -6,22 +6,32 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate:dev": "npx dotenv -e .env.development.local -- prisma migrate dev",
+    "db:push": "npx dotenv -e .env.development.local -- prisma db push",
+    "migrate:reset": "npx dotenv -e .env.development.local -- prisma migrate reset",
+    "db:seed": "npx dotenv -e .env.development.local -- prisma db seed",
+    "prisma:generate": "npx dotenv -e .env.development.local -- prisma generate",
+    "prisma:studio": "npx dotenv -e .env.development.local -- prisma studio"
   },
   "dependencies": {
+    "@prisma/client": "^5.8.1",
+    "@vercel/postgres": "^0.5.1",
+    "dotenv-cli": "^7.3.0",
+    "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.4"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "postcss": "^8",
+    "prisma": "^5.8.1",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
