--- a/package.json
+++ b/package.json
@@ -16,11 +16,18 @@
   },
   "dependencies": {
     "@prisma/client": "^5.8.1",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-slot": "^1.0.2",
     "@vercel/postgres": "^0.5.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "dotenv-cli": "^7.3.0",
+    "lucide-react": "^0.323.0",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
