--- a/package.json
+++ b/package.json
@@ -19,17 +19,22 @@
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@vercel/postgres": "^0.5.1",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dotenv-cli": "^7.3.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.323.0",
-    "next": "14.0.4",
+    "next": "^14.0.4",
+    "next-auth": "^4.24.6",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
