added test data for achievements

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "db:seed": "npx dotenv -e .env.development.local -- prisma db seed",
     "prisma:generate": "npx dotenv -e .env.development.local -- prisma generate",
     "prisma:studio": "npx dotenv -e .env.development.local -- prisma studio",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "prisma:seed": "ts-node prisma/seed_achievement.mjs",
+    "prisma:delete:achi": "ts-node prisma/delete_data.mjs"
   },
   "dependencies": {
     "@prisma/client": "^5.8.1",
@@ -48,6 +50,7 @@
     "postcss": "^8",
     "prisma": "^5.8.1",
     "tailwindcss": "^3.3.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
