--- a/package.json
+++ b/package.json
@@ -41,17 +41,17 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.3",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
     "prisma": "^6.1.0",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.3",
     "ts-node": "^10.9.2",
     "typescript": "^5"
   }
