--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@prisma/client": "^6.1.0",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-navigation-menu": "^1.2.3",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-slot": "^1.2.0",
     "@tanstack/react-query": "^5.62.11",
     "@tanstack/react-query-devtools": "^5.62.11",
     "@vercel/postgres": "^0.10.0",
@@ -38,7 +38,9 @@
     "react": "^19",
     "react-dom": "^19",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss": "^4.1.3",
+    "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.3",
@@ -49,9 +51,8 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
-    "postcss": "^8",
+    "postcss": "^8.5.3",
     "prisma": "^6.1.0",
-    "tailwindcss": "^4.1.3",
     "ts-node": "^10.9.2",
     "typescript": "^5"
   }
